[metadata]
name = sconscontrib
version = 1.0
author = The SCons Foundation
author_email = scons-users@scons.org
description = Contributed builders and other useful logic for the SCons build system.,
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_files = LICENSE.txt
url = https://github.com/SCons/scons-contrib
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
keywords =
    scons
    build
    development

[options]
package_dir =
    =sconscontrib
packages = find_namespace:
python_requires = >=3.6, <4
install_requires =
    SCons>=4
    # rest
    docutils
    # sphinx
    sphinx
    # pandoc
    importlib_metadata; python_version<"3.8"
    panflute
zip_safe = False

[options.packages.find]
where = sconscontrib
